--- a/Front-end/Utils/建站.md
+++ b/Front-end/Utils/建站.md
@@ -169,15 +169,82 @@ IP 地址： `101.132.100.245`。
 
 
 
-# 使用 Express 快速搭建服务器
+# 使用 Express 搭建简易服务器
+
+1. 创建 Express 项目：
+
+    这里在`usr/local`下创建项目`demo`
+
+    ```shell
+    # express demo
+    ```
+
+2. 进入`demo`安装依赖：
+
+    ```bash
+    # cd demo
+    # npm install
+    ```
+
+3. 文本编辑器编辑`app.js`：
+
+    ```shell
+    # vim app.js
+    ```
+
+    添加(==为什么是 80？==）：
+
+    ```js
+    app.listen(80, function () {
+        console.log("service is starting at 80")
+    });
+    ```
+
+    ESC，`:wq`保存并退出。
+
+4. 配置==实例安全组？==：
+
+    ![image-20211104134213161](https://gitee.com/ethereal-bang/images/raw/master/20211104134220.png)
+
+5. 可以`# node app`开启服务器了：
+
+    `node app`后才能进入该网址。
+
+    <img src="https://gitee.com/ethereal-bang/images/raw/master/20211104134330.png" alt="image-20211104134329949" style="zoom:30%;" />
 
 
 
+# 在云服务器发布个人主页
 
+为方便操作可在本地电脑搭建一个 localhost 服务器，配置完成后再一次性上传到云服务器。
 
-# 暂存
+完成前面的步骤后可以在 Xftp 中看到项目目录中有以下文件。
 
-![image-20211102222019156](https://gitee.com/ethereal-bang/images/raw/master/20211102222019.png)
+![image-20211104134930158](https://gitee.com/ethereal-bang/images/raw/master/20211104134930.png)
+
+1. 调整`app.js`、`routes/index.js`==？==
+
+    调整后可以把 HTML 入口文件放在`routes`文件夹下了。
+
+2. 存放静态文件：
+
+    还有静态文件 css、js 等需存放在`pubic`文件夹下。
+
+    初始如下：<img src="https://gitee.com/ethereal-bang/images/raw/master/20211104141020.png" alt="image-20211104141020581" style="zoom:73%;" />
+
+    把每个页面的响应文件存在对应页面文件夹，使其不相互影响。
+
+3. 引用静态文件：
+
+    
+
+# WordPress 搭建个人博客
+
+## 登录云服务器
+
+1. 下载 SSH：
+
+    <img src="https://gitee.com/ethereal-bang/images/raw/master/20211102222019.png" alt="image-20211102222019156" style="zoom: 50%;" />
 
 2753DC81777D0D234D
 
@@ -187,9 +254,62 @@ IP 地址： `101.132.100.245`。
 
 ![image-20211102222053777](https://gitee.com/ethereal-bang/images/raw/master/20211102222053.png)
 
+2. 登录云服务器：
+
+    ```shell
+    ssh root@101.132.100.245
+    ```
+
+    第一次需要输入 yes。提示输入云服务器的登录密码（暗码输入）
+
+登录成功后：![image-20211104152412425](https://gitee.com/ethereal-bang/images/raw/master/20211104152412.png)
+
+
+
+# Node.js + Hexo 搭建个人博客
+
+1. Node.js
+
+2. Github pages
+
+    > [GitHub Pages](https://pages.github.com/) is designed to host your personal, organization, or project pages from a GitHub repository.
+
+    创建仓库取名`[用户名].github.io`
+
+3. Hexo
+
+    ```bash
+    npm i -g hexo-cli
+    
+    npm init	# 初始化博客
+    ```
+
+    ![image-20211105125436173](https://gitee.com/ethereal-bang/images/raw/master/20211105125443.png)
+
+    安装 git 部署插件：
+
+    ```bash
+    npm i hexo-deployer-git --save
+    ```
+
+    分别输入以下命令：
+
+    ```bash
+    hexo clean   #清除缓存文件 db.json 和已生成的静态文件 public
+    hexo g       #生成网站静态文件到默认设置的 public 文件夹(hexo generate 的缩写)
+    hexo d       #自动生成网站静态文件，并部署到设定的仓库(hexo deploy 的缩写)
+    ```
+
+
+
 # 参考资源
 
 [阿里云ECS服务器前后端项目部署 - 掘金](https://juejin.cn/post/6908323868360835085)
 
 [超详细！阿里云ECS服务器建站指南！- 知乎](https://zhuanlan.zhihu.com/p/48246138)
 
+[阿里云ECS服务器建站指南（进阶篇）：发布你的个人主页 - 知乎](https://zhuanlan.zhihu.com/p/48343027)
+
+[个人博客第5篇安装node.js和Hexo - 知乎](https://zhuanlan.zhihu.com/p/105715224)
+
+[Quickstart fro GitHub Pages - GitHub Docs](https://docs.github.com/cn/pages/quickstart)
