--- a/Front-end/Utils/建站.md
+++ b/Front-end/Utils/建站.md
@@ -302,6 +302,12 @@ IP 地址： `101.132.100.245`。
 
 
 
+# GitHub Pages + Jekyll
+
+
+
+
+
 # 参考资源
 
 [阿里云ECS服务器前后端项目部署 - 掘金](https://juejin.cn/post/6908323868360835085)
@@ -313,3 +319,8 @@ IP 地址： `101.132.100.245`。
 [个人博客第5篇安装node.js和Hexo - 知乎](https://zhuanlan.zhihu.com/p/105715224)
 
 [Quickstart fro GitHub Pages - GitHub Docs](https://docs.github.com/cn/pages/quickstart)
+
++ GitHub Pages + Jekyll：
+
+    [搭建一个免费的，无限流量的Blog----github Pages和Jekyll入门 - 阮一峰的网络日志](https://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html)
+
