update: 继承、Node.js

--- a/Front-end/Advance/继承/继承.md
+++ b/Front-end/Advance/继承/继承.md
@@ -183,7 +183,77 @@ function createAnother (original) {
 
 # 寄生组合式继承（最理想）
 
-组合式继承也存效率问题，即父类构造函数会被调用两次。本质上，
+组合式继承也存效率问题，即父类构造函数会被调用两次。
+
+寄生式组合继承通过盗用构造函数继承属性，但使用混合式原型链继承方法。基本思路是不通过父类构造函数给子类原型赋值，而是取得父类原型的一个副本，即是使用寄生式继承来继承父类原型，将返回的新对象赋值给子类型原型。基本模式如下：
+
+```js
+function inheritPrototype(subType, superType) {
+  subType.prototype = Object.create(superType.prototype);	
+  subType.prototype.constructor = subType;	// 不然constructor会是superType
+}
+```
+
++ 行 2 使用`Object.create`与直接赋值`superType.prototype`的区别：
+
+    直接赋值相当于父类、子类共用同一原型，`Object.create`是创建了父类原型的一个副本。
+
+
+
+`inheritPrototype`接收子类构造函数和父类构造函数。
+
++ <span style="color:green">减少了调用父构造函数次数</span>——不通过父构造函数给子类原型赋值，而是取得父类原型的一个副本（深拷贝）
++ <span style="color:green">不会在父类型 prototype 上创建多余属性</span>——子类原型修改时
++ <span style="color:green">原型链仍保持不变</span>（`instanceof`、`isPrototypeOf()`依旧有效）
++ 寄生式组合继承可以算是引用类型继承的最佳模式
+
+
+
+# 类 Extends 继承
+
+虽然类继承使用的是新语法，但背后依旧使用的是原型链
+
++ <span style="font-size:20px">继承基础：</span>
+
+    使用`extend`能继承任何拥有`constructor`和原型的对象，意味着不仅可以继承一个类，还可以继承普通的构造函数：
+
+    ```js
+    // 继承类：
+    class Vehicle {}
+    class Bus extends Vehicle {}
+    
+    // 继承构造函数
+    function Person() {}
+    class Engineer extends Person {}
+    
+    // 类表达式中也可以使用 extends
+    let Doctor = class extends Person {}
+    ```
+
+
+
++ <span style="font-size:20px">子类构造函数与`super()`：</span>
+
+    `super`方法必须在第一行，只能在派生类构造函数和静态方法上使用`super`：
+
+    ```js
+    class Vehicle {
+        static identify() { console.log('vehicle') };
+        constructor() {
+            this.run = true;
+        }
+    }
+    class Bus extends Vehicle {
+        static identify() {
+            super.identify();   // 通过super调用父类上定义的静态方法
+        }
+        constructor() {
+            super();
+        }
+    }
+    ```
+
+
 
 
 
@@ -195,9 +265,7 @@ function createAnother (original) {
 
     [review/继承.md at main · Martinyua/review](https://github.com/Martinyua/review/blob/main/1.JS-Basic/%E7%BB%A7%E6%89%BF.md)
 
-+ 原型式继承：
 
-    [Object.create() - JavaScript | MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/create)
 
 [^ 1 ]:继承多个
 [^ 2]:盗用构造函数
