--- a/Front-end/Utils/建站.md
+++ b/Front-end/Utils/建站.md
@@ -42,7 +42,7 @@ IP 地址： `101.132.100.245`。
 
     <img src="https://gitee.com/ethereal-bang/images/raw/master/20211103001234.png" alt="image-20211103001234824" style="zoom:50%;" />
 
-接下来的操作就与在服务器本身操作一样了（直接在阿里云的远程连接也可）。==？==
+接下来的操作就与在服务器本身操作一样了（直接在阿里云的远程连接也可）。
 
 
 
@@ -192,7 +192,7 @@ IP 地址： `101.132.100.245`。
     # vim app.js
     ```
 
-    添加(==为什么是 80？==）：
+    添加(80——端口号）：
 
     ```js
     app.listen(80, function () {
@@ -306,6 +306,20 @@ IP 地址： `101.132.100.245`。
 
 
 
+# Niginx
+
+非同步框架的网页伺服器，也可以用作反向代理、负载平衡器和 HTTP 快取
+
+Nginx可以作为一个HTTP服务器进行网站的发布处理
+
+
+
+# 部署前端
+
+1. 绑定 SSH 密钥对
+2. Github 项目绑定密钥
+3. 
+
 
 
 # 参考资源
@@ -323,4 +337,8 @@ IP 地址： `101.132.100.245`。
 + GitHub Pages + Jekyll：
 
     [搭建一个免费的，无限流量的Blog----github Pages和Jekyll入门 - 阮一峰的网络日志](https://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html)
+    
++ 部署前端：
+
+    [阿里云ECS服务器前后端项目部署 - 掘金](https://juejin.cn/post/6908323868360835085#heading-15)
 
