update: FE review

--- a/Front-end/Utils/i18n.md
+++ b/Front-end/Utils/i18n.md
@@ -77,10 +77,9 @@ return <>
 </>
 ```
 
-> **Context:**
->
-> 是使用 context api，但不需要 i18n 的 provider 注入 jsx 对象
->
-> 因为 `initReactI18next` 对象引用时自动帮助注入了 context api
->
-> 所以不需要在 `index` 文件做任何操作
+**切换语言**
+
+```typescript
+i18n.changeLanguage(lng?: string, callback?:Callback);
+```
+
